@@ -10,6 +10,7 @@ Android Client
 iOS Client
 -
 Server
+- TeamTalk Pro server requires BearWare.dk WebLogin to start
 - Fixed crash issue when sharing large desktop windows
 
 Version 5.20.1, 2025/09/15
